fix relasenoteのopenapiと既存のもの修正
