# backend/app/Http/ApiActions/ReleaseNote/GetAllReleaseNoteAction.php
@@ -6,10 +6,18 @@ namespace App\Http\ApiActions\ReleaseNote;
 
 use App\Http\Controllers\Controller;
 use App\Models\Releasenote;
+use App\OpenApi\Responses\ReleaseNote\ReleaseNoteResponse;
 use Illuminate\Http\JsonResponse;
+use Vyuldashev\LaravelOpenApi\Attributes as OpenApi;
 
+#[OpenApi\PathItem]
 final class GetAllReleaseNoteAction extends Controller
 {
+    /**
+     * 全てのリリースノートを取得
+     */
+    #[OpenApi\Operation()]
+    #[OpenApi\Response(ReleaseNoteResponse::class)]
     public function __invoke(): JsonResponse
     {
         /** @todo リリースノートの個別ページがないので、現状お知らせ一覧をリンク先にしているため、個別ページできたら差し替え */
