# backend/app/OpenApi/Schemas/ReleaseNote/ReleaseNoteResponseSchema.php
@@ -2,7 +2,7 @@
 
 declare(strict_types=1);
 
-namespace App\OpenApi\Schemas\Osirase;
+namespace App\OpenApi\Schemas\ReleaseNote;
 
 use GoldSpecDigital\ObjectOrientedOAS\Contracts\SchemaContract;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\AllOf;
@@ -13,21 +13,21 @@ use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
 use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
 use Vyuldashev\LaravelOpenApi\Factories\SchemaFactory;
 
-class OsiraseResponseSchema extends SchemaFactory implements Reusable
+class ReleaseNoteResponseSchema extends SchemaFactory implements Reusable
 {
     /**
      * @return AllOf|OneOf|AnyOf|Not|Schema
      */
     public function build(): SchemaContract
     {
-        return Schema::array('osirase')
+        return Schema::array('releaseNote')
             ->items(
-                Schema::object('osirase')
+                Schema::object('releaseNote')
                     ->properties(
                         Schema::string('title')->example('タイトル'),
                         Schema::string('date')->example('2021-12-29T15:00:00.000000Z'),
                         Schema::string('description')->description('改行含む文字列が入ってくるがエスケープなどはされていない')->example('内容'),
-                        Schema::string('url')->example('http://localhost:2010/osirase'),
+                        Schema::string('url')->example('http://localhost:2010/releaseNote'),
                     )
             );
     }
